--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -1,108 +1,107 @@
 .ExploreGames {
-  width: 100%;
-  aspect-ratio: 16/9;
+	width: 100%;
+	height: 100vh;
 }
 
 .exploreGamesBackground {
-  width: 100%;
-  aspect-ratio: 16/9;
-  margin-bottom: 3rem;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-origin: border-box;
-  clip-path: polygon(0 30%, 100% 0, 100% 70%, 0 100%);
-  display: flex;
-  align-items: center;
-  position: absolute;
-  left: 0;
+	width: 100%;
+	height: 100vh;
+	margin-bottom: 3rem;
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-origin: border-box;
+	display: flex;
+	align-items: center;
+	position: absolute;
+	left: 0;
 }
 
 .ExploreTexts {
-  position: absolute;
-  width: 20%;
-  top: 50%;
-  translate: 0 -50%;
-  left: 20%;
+	position: absolute;
+	width: 20%;
+	top: 50%;
+	translate: 0 -50%;
+	left: 20%;
 }
 .ExploreTexts h4 {
-  font-size: 16px;
-  font-weight: 400;
+	font-size: 16px;
+	font-weight: 400;
 }
 .ExploreTexts p {
-  margin: 1rem 0;
-  font-size: 14px;
+	margin: 1rem 0;
+	font-size: 14px;
 }
 
 .ExploreTexts a {
-  position: relative;
-  padding: 1rem 2rem;
-  border-radius: 5px;
-  margin-top: 1rem;
-  display: inline-block;
-  text-decoration: none;
-  color: black;
-  cursor: pointer;
-  transition: all 300ms;
-  background-color: white;
-  border: 1px solid white;
-  font-size: 14px;
+	position: relative;
+	padding: 1rem 2rem;
+	border-radius: 5px;
+	margin-top: 1rem;
+	display: inline-block;
+	text-decoration: none;
+	color: black;
+	cursor: pointer;
+	transition: all 300ms;
+	background-color: white;
+	border: 1px solid white;
+	font-size: 14px;
 }
 .ExploreTexts a:hover {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-  border: 1px solid white;
+	background-color: rgba(0, 0, 0, 0.4);
+	color: white;
+	border: 1px solid white;
 }
 .ExploreTexts a:active {
-  background-color: rgb(78, 78, 78);
+	background-color: rgb(78, 78, 78);
 }
 
 @media only screen and (max-width: 768px) {
-  .ExploreTexts {
-    width: 30%;
-    left: 10%;
-  }
+	.ExploreTexts {
+		width: 30%;
+		left: 10%;
+	}
 
-  .ExploreTexts h4 {
-    font-size: 14px;
-  }
-  .ExploreTexts p,
-  .ExploreTexts a {
-    font-size: 12px;
-  }
-  .ExploreGames {
-    width: 100%;
-    aspect-ratio: 2/3;
-  }
+	.ExploreTexts h4 {
+		font-size: 14px;
+	}
+	.ExploreTexts p,
+	.ExploreTexts a {
+		font-size: 12px;
+	}
+	.ExploreGames {
+		width: 100%;
+		aspect-ratio: 2/3;
+	}
 
-  .exploreGamesBackground {
-    width: 100%;
-    aspect-ratio: 2/3;
-  }
+	.exploreGamesBackground {
+		width: 100%;
+		aspect-ratio: 2/3;
+	}
 }
 @media only screen and (max-width: 356px) {
-  .ExploreTexts {
-    width: 80%;
-    translate: 0 -40%;
-    left: 10px;
-  }
+	.ExploreTexts {
+		width: 80%;
+		translate: 0 -40%;
+		left: 10px;
+	}
 }
 @media only screen and (max-width: 267px) {
-  .ExploreTexts a {
-    padding: 0.5rem 1rem;
-  }
+	.ExploreTexts a {
+		padding: 0.5rem 1rem;
+	}
 }
 @media only screen and (min-width: 2134px) {
-  .ExploreGames {
-    aspect-ratio: 5/3;
-  }
+	.ExploreGames {
+		aspect-ratio: 5/3;
+	}
 
-  .ExploreTexts h4 {
-    font-size: 18px;
-  }
-  .ExploreTexts p,
-  .ExploreTexts a {
-    font-size: 16px;
-  }
+	.ExploreTexts h4 {
+		font-size: 18px;
+	}
+	.ExploreTexts p,
+	.ExploreTexts a {
+		font-size: 16px;
+	}
 }
