--- a/src/Shared/GameCards/GameCards/GameCards.module.css
+++ b/src/Shared/GameCards/GameCards/GameCards.module.css
@@ -7,6 +7,7 @@
 .headerButtonContainer {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 }
 
 @media only screen and (max-width: 1023px) {
