--- a/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
+++ b/src/Shared/GameCards/Components/HorizontalCards/HorizontalCards.module.css
@@ -1,4 +1,4 @@
-.Cards {
+.cards {
 	padding: 20px 0.5rem;
 	width: calc(100% + 1rem);
 	max-width: 100vw;
@@ -6,7 +6,7 @@
 	overflow: hidden;
 }
 
-.CardSlider {
+.cardSlider {
 	list-style: none;
 	position: relative;
 	display: flex;
