--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCards/DiscoverBannerItemCard/Components/CardNameContainer/CardNameContainer.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemCards/DiscoverBannerItemCard/Components/CardNameContainer/CardNameContainer.module.css
@@ -29,6 +29,7 @@
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.2);
 	backdrop-filter: blur(4px);
+	-webkit-backdrop-filter: blur(4px);
 	z-index: -1;
 }
 
