--- a/src/Shared/Modal/ModalBody/ModalBody.module.css
+++ b/src/Shared/Modal/ModalBody/ModalBody.module.css
@@ -24,6 +24,7 @@
 	height: 100%;
 	background-color: #18181ccd;
 	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
 	z-index: -1;
 }
 .modalScrollContainer {
