--- a/src/Shared/SecondNavbar/Components/SecondNavDesktopLinks/SecondNavDesktopLinks.module.css
+++ b/src/Shared/SecondNavbar/Components/SecondNavDesktopLinks/SecondNavDesktopLinks.module.css
@@ -3,7 +3,7 @@
 	display: flex;
 	margin-left: 15px;
 	pointer-events: auto;
-	translate: 0 -100%;
+	/* translate: 0 -100%; */
 	transition: translate 300ms;
 }
 
