--- a/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
+++ b/src/Shared/SelectionField/SelectionFieldList/SelectionFieldList.module.css
@@ -10,6 +10,7 @@
 	border-radius: 4px;
 	background-color: rgba(37, 37, 37, 0.719);
 	backdrop-filter: blur(50px);
+	-web-kit-backdrop-filter: blur(50px);
 	cursor: default;
 	z-index: 1;
 	opacity: 0;
