--- a/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
+++ b/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
@@ -5,7 +5,17 @@
 	border-radius: 4px;
 	cursor: default;
 	z-index: 1;
-	backdrop-filter: blur(500px);
+}
+.mainContainer::after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(37, 37, 37, 0.342);
+	filter: blur(5px);
+	top: 0;
+	left: 0;
+	z-index: -1;
 }
 
 .showBottom {
@@ -71,12 +81,9 @@
 	width: 100%;
 	list-style: none;
 	overflow-y: auto;
-	background-color: rgba(37, 37, 37, 0.9);
 	padding: 0 1rem;
-	backdrop-filter: blur(500px);
-	opacity: 0;
+	position: relative;
 	transition:
-		opacity 200ms,
 		translate 200ms,
 		height 200ms;
 }
@@ -91,7 +98,6 @@
 .showAbove .listContainer.fadeIn,
 .showBottom .listContainer.fadeIn {
 	translate: 0 0;
-	opacity: 1;
 }
 
 .itemContainer {
