--- a/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
+++ b/src/Shared/Toasts/Components/ToastBody/ToastBody/ToastBody.module.css
@@ -7,6 +7,7 @@
 	padding: 1rem 2rem 1rem 1rem;
 	background-color: #2f2f2fcd;
 	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
 	border-radius: 4px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	margin-bottom: 16px;
