--- a/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
+++ b/src/Shared/Tooltip/TooltipBody/TooltipBody.module.css
@@ -22,6 +22,7 @@
 	background-color: #22222250;
 	border-radius: 4px;
 	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
 	z-index: -1;
 }
 
@@ -45,6 +46,7 @@
 	height: 10px;
 	background-color: #22222250;
 	backdrop-filter: blur(50px);
+	-webkit-backdrop-filter: blur(50px);
 }
 
 .top::after,
