--- a/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/EventGames/EventGames/EventGames.module.css
@@ -1,21 +1,36 @@
-.EventGamesContainer {
+.container {
 	margin-bottom: 3rem;
 	width: 100%;
 	max-width: 1600px;
 }
-.EventGames {
+
+.eventGames {
 	width: 100%;
 	display: flex;
 	column-gap: 1rem;
 	list-style: none;
 }
+.arrowBtn {
+	position: sticky;
+	top: 550px;
+}
+.prevBtn {
+	width: 1rem;
+	rotate: -90deg;
+}
+.nextBtn {
+	width: 1rem;
+	rotate: 90deg;
+}
 
 @media only screen and (max-width: 768px) {
-	.EventGamesContainer {
+	.container {
 		width: calc(100% - 1rem);
+	}
+	.eventGamesContainer {
 		overflow: hidden;
 	}
-	.EventGames {
+	.eventGames {
 		width: 100%;
 		left: 5px;
 		transition: translate 400ms;
