--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -10,6 +10,7 @@
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
+	clip-path: polygon(0 30%, 100% 0, 100% 70%, 10% 100%);
 	background-repeat: no-repeat;
 	background-origin: border-box;
 	display: flex;
