--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -1,13 +1,15 @@
 .exploreGames {
 	width: 100%;
 	height: 100vh;
+	min-height: 500px;
 }
 
 .exploreGamesBackground {
 	width: 100%;
 	height: 100vh;
+	min-height: 500px;
 	margin-bottom: 3rem;
-	background-position: center;
+	background-position: top center;
 	background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
@@ -22,28 +24,27 @@
 	--angle-deg: 6deg;
 }
 
-.exploreGamesBackground::before {
-	content: '';
-	position: absolute;
-	bottom: 100%;
-	right: 0;
-	transform-origin: bottom right;
-	width: var(--bars-width);
-	height: var(--bars-height);
-	rotate: calc(-1 * var(--angle-deg));
-	background-color: #121212;
-}
-
+.exploreGamesBackground::before,
 .exploreGamesBackground::after {
 	content: '';
 	position: absolute;
-	top: 100%;
-	left: 0;
-	transform-origin: top left;
+	background-color: #121212;
 	width: var(--bars-width);
 	height: var(--bars-height);
 	rotate: calc(-1 * var(--angle-deg));
-	background-color: #121212;
+	z-index: 1;
+}
+
+.exploreGamesBackground::before {
+	bottom: 100%;
+	right: 0;
+	transform-origin: bottom right;
+}
+
+.exploreGamesBackground::after {
+	top: 100%;
+	left: 0;
+	transform-origin: top left;
 }
 
 .exploreTexts {
