--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -1,6 +1,6 @@
 .exploreGames {
 	width: 100%;
-	height: 100vh;
+	height: 90vh;
 	min-height: 500px;
 }
 
@@ -9,13 +9,6 @@
 	height: 100vh;
 	min-height: 500px;
 	margin-bottom: 3rem;
-	background-position: top center;
-	background-size: cover;
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-origin: border-box;
-	display: flex;
-	align-items: center;
 	position: absolute;
 	left: 0;
 	overflow: hidden;
@@ -32,17 +25,28 @@
 	width: var(--bars-width);
 	height: var(--bars-height);
 	rotate: calc(-1 * var(--angle-deg));
-	z-index: 1;
+}
+
+.imageBackground {
+	width: 100%;
+	height: calc(100% - 1rem);
+	top: 0.5rem;
+	position: absolute;
+	background-position: top center;
+	background-size: cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	z-index: -1;
 }
 
 .exploreGamesBackground::before {
-	bottom: 100%;
+	bottom: calc(100% - 0.5rem);
 	right: 0;
 	transform-origin: bottom right;
 }
 
 .exploreGamesBackground::after {
-	top: 100%;
+	top: calc(100% - 0.5rem);
 	left: 0;
 	transform-origin: top left;
 }
