refector: browser Filter button sort container, use change body overflow udpate

--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer/SortContainer.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer/SortContainer.module.css
@@ -1,5 +1,10 @@
 .sortContainer {
 	position: relative;
+	max-height: 100vh;
+}
+.sortDropDown {
+	height: 100vh;
+	position: relative;
 }
 
 @media only screen and (max-width: 768px) {
