--- a/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer/SortContainer.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/BrowseHeader/Components/SortContainer/SortContainer/SortContainer.module.css
@@ -1,10 +1,12 @@
 .sortContainer {
 	position: relative;
-	max-height: 100vh;
+	max-height: 100%;
 }
 .sortDropDown {
-	height: 100vh;
+	max-height: 100%;
+	height: 100%;
 	position: relative;
+	display: flex;
 }
 
 @media only screen and (max-width: 768px) {
