--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
@@ -1,10 +1,10 @@
 .footer {
 	width: 100%;
 	height: 81px;
-	flex-shrink: 0;
 	position: sticky;
 	bottom: 0;
 	scale: 1 1;
+	overflow: hidden;
 	transition: scale 200ms;
 }
 
