--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -24,7 +24,8 @@
 }
 
 .optionContainer {
-	width: 240px;
+	max-width: 100vw;
+	width: 15rem;
 	list-style-type: none;
 }
 
@@ -108,20 +109,6 @@
 	background-image: linear-gradient(to right, #8200ff, #df00ff);
 }
 
-.containerTransition .footer {
-	transition:
-		opacity 200ms,
-		height 200ms 0ms,
-		margin-top 200ms 0ms;
-}
-
-.containerTransition .footerHide {
-	transition:
-		opacity 200ms,
-		height 0ms 200ms,
-		margin-top 0ms 200ms;
-}
-
 @media only screen and (max-width: 1099px) {
 	.drawer {
 		max-width: 0px;
@@ -129,43 +116,37 @@
 		padding-top: 0rem;
 	}
 
-	.containerTransition {
-		transition: max-width 200ms;
-	}
-	.arrowBtn::before {
-		rotate: 45deg;
-		background-image: linear-gradient(to right, #8200ff, #df00ff);
-	}
-	.arrowBtn::after {
-		rotate: -45deg;
-		background-image: linear-gradient(to right, #8200ff, #df00ff);
-	}
-	.collapsePosition .arrowBtn::before {
-		rotate: -45deg;
-		background-image: linear-gradient(to left, #8200ff, #df00ff);
-	}
-	.collapsePosition .arrowBtn::after {
-		rotate: 45deg;
-		background-image: linear-gradient(to left, #8200ff, #df00ff);
+	.drawerOptions {
+		max-width: 100vw;
+		width: 15rem;
+		height: 100vh;
+		background-color: #18181c;
+		position: absolute;
+		translate: -100%;
+		padding-top: 2rem;
+		transition: transform 200ms;
 	}
 
-	.containerCollapse {
-		max-width: 15rem;
-		width: 100%;
+	.containerCollapse .drawerOptions {
+		translate: 0%;
 	}
 
 	.expandedPosition {
-		right: -1.6rem;
+		left: min(13rem, calc(100vw - 2rem));
+		transition: none;
+		right: 0px;
 	}
 
 	.collapsePosition {
-		right: 0.65rem;
+		right: 0rem;
+		left: -0.45rem;
 	}
 
-	.shadow {
-		position: fixed;
-		top: 0;
-		left: 0;
-		z-index: 1;
+	.containerTransition .collapseButton {
+		transition: left 200ms;
+	}
+
+	.containerTransition .drawerOptions {
+		transition: translate 200ms;
 	}
 }
