fix: dashbaord drawer, modal scroll, textfield text area height

--- a/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Components/DrawerFooter/DrawerFooter.module.css
@@ -4,12 +4,15 @@
 	position: fixed;
 	scale: 1 1;
 	overflow: hidden;
-	transition: scale 200ms;
 	transform-origin: left;
 	max-width: 13rem;
 	left: 1rem;
 	bottom: 0.5rem;
 	z-index: 5;
+}
+
+.footerTransition {
+	transition: scale 200ms;
 }
 
 .footerHide {
