--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagsContainer/TagsContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagsContainer/TagsContainer.module.css
@@ -1,6 +1,6 @@
 .tag {
 	flex: 1 0 0px;
-	min-width: 30%;
+	min-width: 15rem;
 }
 .tagHeader {
 	display: flex;
@@ -78,6 +78,12 @@
 }
 .cross::before {
 	rotate: -45deg;
+}
+
+@media only screen and (max-width: 543px) {
+	.tag {
+		padding-right: 1rem;
+	}
 }
 
 @media only screen and (max-width: 264px) {
