--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagsContainer/TagsContainer.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/Components/TagsContainer/TagsContainer/TagsContainer.module.css
@@ -1,29 +1,15 @@
-.tag {
-	flex: 1 0 0px;
-	min-width: 15rem;
-}
-.tagHeader {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.tagHeader h3 {
-	font-weight: 400;
-	margin: 1rem 0;
-}
-
-.tagList {
+.tags {
 	list-style: none;
 	width: 100%;
 }
-.tagListItem {
+.tag {
 	display: flex;
 	padding: 0.5rem 0;
 	position: relative;
 	justify-content: space-between;
 	gap: 1rem;
 }
-.tagListItem:not(:last-child)::after {
+.tag:not(:last-child)::after {
 	content: '';
 	position: absolute;
 	width: 100%;
@@ -33,7 +19,7 @@
 	bottom: 0;
 }
 
-.tagItem {
+.tagName {
 	word-break: break-all;
 }
 
@@ -78,16 +64,4 @@
 }
 .cross::before {
 	rotate: -45deg;
-}
-
-@media only screen and (max-width: 543px) {
-	.tag {
-		padding-right: 1rem;
-	}
-}
-
-@media only screen and (max-width: 264px) {
-	.tag {
-		min-width: 100%;
-	}
 }
