--- a/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/ShowCategoryTags/ShowCategoryTags.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/EditTags/Components/ShowTags/ShowCategoryTags/ShowCategoryTags.module.css
@@ -1,6 +1,72 @@
-.showCategoryTags {
+.showCategory {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 2rem;
 	margin-top: 10px;
+}
+.category {
+	flex: 1 0 0px;
+	min-width: 15rem;
+}
+.categoryHeader {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.categoryHeader h3 {
+	font-weight: 400;
+	margin: 1rem 0;
+}
+.crossBtn {
+	width: 1.5rem;
+	height: 1.5rem;
+	flex-shrink: 0;
+	background-color: transparent;
+	border: none;
+	background-color: #ffffff2d;
+	border-radius: 50%;
+	overflow: hidden;
+	cursor: pointer;
+	transition: background-color 100ms;
+}
+.crossBtn:hover {
+	background-color: rgba(255, 255, 255, 0.13);
+}
+.crossBtn:active {
+	background-color: #42424200;
+}
+.cross {
+	position: relative;
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
+.cross::after,
+.cross::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 0.1rem;
+	background-color: #8b8b8b;
+	top: 50%;
+	left: 50%;
+	translate: -50% -50%;
+	transition: background-color 200ms;
+}
+.cross::after {
+	rotate: 45deg;
+}
+.cross::before {
+	rotate: -45deg;
+}
+@media only screen and (max-width: 543px) {
+	.category {
+		padding-right: 1rem;
+	}
+}
+
+@media only screen and (max-width: 264px) {
+	.category {
+		min-width: 100%;
+	}
 }
