--- a/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
+++ b/src/Pages/Dashboard/Components/Drawer/Drawer/Drawer.module.css
@@ -23,6 +23,9 @@
 .optionContainer {
 	max-width: 100vw;
 	width: 15rem;
+	height: calc(100vh - 11.5rem);
+}
+.options {
 	list-style-type: none;
 }
 
@@ -36,7 +39,6 @@
 
 .drawerOptions {
 	overflow: hidden;
-	height: calc(100vh - 11.5rem);
 	min-height: 2rem;
 }
 
