--- a/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptionsWithApplyBtn/Components/FilterOptions/FilterOptions/FilterOptions.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/FilterGames/Components/FilterOptionsWithApplyBtn/Components/FilterOptions/FilterOptions/FilterOptions.module.css
@@ -8,6 +8,9 @@
 }
 
 @media only screen and (max-width: 768px) {
+	.filterOptionList {
+		padding-bottom: 2rem;
+	}
 	.filterContainer {
 		position: relative;
 		height: 100%;
