refector: aspect-ratio changed with padding bottom

--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemMobile/DiscoverBannerItemMobile.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemMobile/DiscoverBannerItemMobile.module.css
@@ -2,7 +2,7 @@
 	top: 0;
 	width: 80vw;
 	position: absolute;
-	aspect-ratio: 1/1.33273662;
+	height: 100%;
 	transition:
 		opacity 500ms,
 		translate 500ms,
