--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItems/DiscoverBannerItem/DiscoverBannerItem.module.css
@@ -1,20 +1,15 @@
 .carouselItem {
-	width: 75vw;
-	max-width: 1600px;
+	width: 100%;
+	height: 100%;
 	position: absolute;
+	opacity: 0;
 	visibility: hidden;
 	border-radius: 5px;
 }
 
-.itemHide {
-	z-index: 0;
-	opacity: 0;
-	visibility: hidden;
-}
-
 .carouselImg {
 	width: 100%;
-	aspect-ratio: 1.77777778/1;
+	height: 100%;
 	border-radius: 5px;
 }
 
@@ -45,20 +40,20 @@
 	border: 1px solid rgb(255, 255, 255);
 }
 
-#initialBanner {
+.initialBanner {
 	opacity: 1;
 	z-index: 1;
 	visibility: visible;
 }
 
-#bannerFadeIn {
+.bannerFadeIn {
 	opacity: 0;
 	z-index: 1;
 	visibility: visible;
 	animation: 200ms cubic-bezier(0.17, 0.17, 0.23, 1) 200ms 1 normal forwards running fadeIn;
 }
 
-#bannerFadeOut {
+.bannerFadeOut {
 	opacity: 0;
 	visibility: hidden;
 	animation: 300ms cubic-bezier(0.69, 0, 0.83, 0.83) 0s 1 normal forwards running fadeout;
@@ -110,12 +105,12 @@
 @media only screen and (max-width: 1023px) and (min-width: 769px) {
 	.carouselItem {
 		width: 100%;
-		aspect-ratio: 1.77777778/1;
+		height: 100%;
 	}
 
 	.carouselImg {
 		width: 100%;
-		aspect-ratio: 1.77777778/1;
+		height: 100%;
 		border-radius: 5px;
 	}
 }
