--- a/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/ExploreGames/ExploreGames.module.css
@@ -51,6 +51,12 @@
 	transform-origin: top left;
 }
 
+.exploreGamesContent {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
 .exploreTexts {
 	position: absolute;
 	width: 20%;
@@ -105,12 +111,11 @@
 	}
 	.exploreGames {
 		width: 100%;
-		aspect-ratio: 2/3;
 	}
 
 	.exploreGamesBackground {
 		width: 100%;
-		aspect-ratio: 2/3;
+		height: 100%;
 	}
 }
 @media only screen and (max-width: 356px) {
@@ -126,10 +131,6 @@
 	}
 }
 @media only screen and (min-width: 2134px) {
-	.exploreGames {
-		aspect-ratio: 5/3;
-	}
-
 	.exploreTexts h4 {
 		font-size: 18px;
 	}
