--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerItem/IndiGameBannerItem.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerItem/IndiGameBannerItem.module.css
@@ -1,16 +1,23 @@
 .individualGameBannerItem {
-  min-width: 100%;
-  aspect-ratio: 1.77777778;
-  position: relative;
+	min-width: 100%;
+	padding-bottom: calc(9 / 16 * 100%);
+	position: relative;
 }
+
+.cover {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+
 .individualGameBannerItem:not(:first-child) {
-  margin-left: 20px;
+	margin-left: 20px;
 }
 .coverImg {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 50%;
+	top: 50%;
+	translate: -50% -50%;
 }
