--- a/src/Shared/ProfilePhotoUploader/ProfilePhotoUploader.module.css
+++ b/src/Shared/ProfilePhotoUploader/ProfilePhotoUploader.module.css
@@ -6,7 +6,6 @@
 	height: 100%;
 	max-width: 20rem;
 	max-height: 20rem;
-	aspect-ratio: 1/1;
 	border-radius: 4px;
 	background-color: transparent;
 	border: none;
@@ -15,10 +14,17 @@
 	overflow: hidden;
 }
 
-.profilePhotoButton img {
+.profileImageContainer {
+	width: 100%;
+	padding-bottom: 100%;
+	position: relative;
+}
+.profileImageContainer img {
+	position: absolute;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	left: 0;
+	top: 0;
 }
 
 .inputField {
