--- a/src/Shared/VideoPlayer/VideoPlayer/VideoPlayer.module.css
+++ b/src/Shared/VideoPlayer/VideoPlayer/VideoPlayer.module.css
@@ -1,11 +1,11 @@
-.videoContainer {
-  width: 100%;
-  position: relative;
-  aspect-ratio: 1.7777778;
+.videoContainer:not(:fullscreen) {
+	width: 100%;
+	position: relative;
+	padding-bottom: calc(9 / 16 * 100%);
 }
-
 .videoContainer:fullscreen .video {
-  left: 50%;
-  top: 50%;
-  translate: -50% -50%;
+	position: absolute;
+	left: 50%;
+	top: 0;
+	translate: -50%;
 }
