--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItems/DiscoverBannerInfoItems.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerInfoItems/DiscoverBannerInfoItems/DiscoverBannerInfoItems.module.css
@@ -1,9 +1,11 @@
 .infoItems {
 	z-index: 1;
+	width: 100%;
 	height: 100%;
 	position: absolute;
 	bottom: 0;
-	left: 1rem;
+	left: 0;
+	pointer-events: none;
 }
 
 .itemsContainer {
