--- a/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
+++ b/src/Shared/FirstNavbar/Components/NavProfileInfo/NavProfileInfo.module.css
@@ -7,6 +7,8 @@
 	width: 30px;
 	height: 30px;
 	margin-right: 10px;
+	border-radius: 50%;
+	overflow: hidden;
 }
 
 @media only screen and (max-width: 768px) {
