--- a/src/Shared/SearchField/Components/SearchFieldBox/SearchFieldBox.module.css
+++ b/src/Shared/SearchField/Components/SearchFieldBox/SearchFieldBox.module.css
@@ -10,6 +10,7 @@
 	height: 40px;
 	z-index: 1;
 	width: max-content;
+	cursor: text;
 }
 .show .searchIcon {
 	fill: rgb(0, 0, 0);
@@ -52,10 +53,6 @@
 	align-items: center;
 	fill: rgb(255, 255, 255, 0.5);
 	transition: fill 200ms;
-}
-
-.suggestionList {
-	max-width: min(100%, 600px);
 }
 
 @media only screen and (max-width: 768px) {
