--- a/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemMobile/DiscoverBannerItemMobile.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/DiscoverBanner/Components/DiscoverBannerItemMobile/DiscoverBannerItemMobile.module.css
@@ -43,7 +43,11 @@
 	translate: -95% 0;
 }
 
-.carouselImg {
+.carouselImgContainer {
 	width: 100%;
 	border-radius: 0;
+}
+
+.aspectRatioClassName {
+	padding-bottom: calc(100% / 1 * 1.34);
 }
