--- a/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
+++ b/src/Pages/MainContent/Pages/Discover/Components/FreeGames/FreeGame/FreeGame.module.css
@@ -47,6 +47,23 @@
 .gameDetail p {
 	font-size: 14px;
 }
+
+.aspectRatioClassName1 {
+	padding-bottom: calc(100% / 3 * 1);
+}
+
+.aspectRatioClassName2 {
+	padding-bottom: calc(100% / 3 * 2);
+}
+
+.aspectRatioClassName3 {
+	padding-bottom: calc(100% / 3 * 3);
+}
+
+.aspectRatioClassName4 {
+	padding-bottom: calc(100% / 3 * 4);
+}
+
 @media only screen and (min-width: 1600px) {
 	.gameDetail p {
 		font-size: 16px;
