--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameBanner/Components/IndiGameBannerCard/IndiGameBannerCard.module.css
@@ -15,7 +15,6 @@
 	width: 100%;
 	cursor: default;
 	position: relative;
-	padding-bottom: calc(9 / 16 * 100%);
 }
 
 .notActive {
@@ -57,6 +56,10 @@
 
 .active {
 	opacity: 0.5;
+}
+
+.aspectRatioClassName {
+	padding-bottom: calc(100% / 16 * 9);
 }
 
 @media only screen and (max-width: 1439px) {
