--- a/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
+++ b/src/Pages/MainContent/Pages/IndiGame/Components/IndiGameDetails/Components/IndiGameDetailAside/Components/IndiGameAsideHeader/IndiGameAsideHeader.module.css
@@ -10,6 +10,10 @@
 	margin: 0.5rem 0;
 }
 
+.aspectRatioClassName {
+	padding-bottom: calc(100% / 16 * 9);
+}
+
 @media screen and (max-width: 1600px) and (min-width: 900px) {
 	.imageContainer {
 		margin-bottom: 1rem;
