update: suggestion list , search field

--- a/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/UserAdminContainer/Components/UserCard/UserCard.module.css
@@ -18,9 +18,8 @@
 	padding: 1rem;
 }
 
-.cardContainerImg img {
-	width: 100%;
-	border-radius: 50%;
+.aspectRatioClassName {
+	padding-bottom: 100%;
 }
 
 .cardContainerInfo {
