--- a/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
+++ b/src/Shared/SuggestionList/SuggestionListBody/SuggestionListBody.module.css
@@ -14,15 +14,38 @@
 	bottom: 100%;
 }
 
+.listContainer {
+	width: 100%;
+	overflow: visible;
+	position: relative;
+	padding: 10px 20px;
+	background-color: rgba(37, 37, 37, 0.7);
+	backdrop-filter: blur(10px);
+	opacity: 0;
+	display: flex;
+	flex-direction: column;
+	transition:
+		height 200ms,
+		opacity 200ms;
+}
+
+.list {
+	list-style: none;
+	overflow-y: auto;
+	width: 100%;
+	flex-grow: 1;
+}
+.extraSection {
+	flex-shrink: 0;
+}
+
 .item {
 	position: relative;
-	height: 60px;
-	margin: 0 1rem;
+	height: 56px;
 }
 
 .item button {
 	width: 100%;
-	padding: 10px 0;
 	cursor: pointer;
 	height: 100%;
 	background-color: transparent;
@@ -35,18 +58,7 @@
 		opacity 0ms 300ms;
 }
 .item:hover button {
-	color: rgb(196, 196, 196);
-}
-
-.item:not(:last-child)::after {
-	content: ' ';
-	position: absolute;
-	width: 100%;
-	height: 1px;
-	background-color: rgba(255, 255, 255, 0.1);
-	left: 0;
-	bottom: 0;
-	transition: background-color 200ms;
+	text-decoration: underline;
 }
 
 .selected button {
@@ -67,30 +79,8 @@
 	padding: 10px 0;
 }
 
-.listContainer {
-	width: 100%;
-	list-style: none;
-	overflow-y: auto;
-	position: relative;
-	background-color: rgba(37, 37, 37, 0.7);
-	backdrop-filter: blur(10px);
-	opacity: 0;
-	transition:
-		translate 200ms,
-		height 200ms,
-		opacity 200ms;
-}
-
-.showBottom .listContainer {
-	translate: 0 -30%;
-}
-.showAbove .listContainer {
-	translate: 0 10px;
-}
-
 .showAbove .listContainer.fadeIn,
 .showBottom .listContainer.fadeIn {
-	translate: 0 0;
 	opacity: 1;
 }
 
@@ -112,18 +102,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 60px;
-}
-
-.placeHolder:not(:last-child)::after {
-	content: ' ';
-	position: absolute;
-	width: 100%;
-	height: 1px;
-	background-color: rgba(255, 255, 255, 0.1);
-	left: 0;
-	bottom: 0;
-	transition: background-color 200ms;
+	height: 56px;
 }
 
 .itemContainerPlaceHolder {
@@ -131,14 +110,12 @@
 	display: flex;
 	align-items: center;
 	gap: 10px;
-	margin: 0 1rem;
 }
 
 .imagePlaceHolder {
 	width: 30px;
 	height: 30px;
 	background: linear-gradient(90deg, rgb(66, 66, 66) 0%, rgba(88, 88, 88, 0.7) 50%, rgb(66, 66, 66) 100%);
-	border-radius: 50%;
 	margin-right: 1rem;
 }
 
