fix: image component bug fix

--- a/src/Pages/MainContent/Pages/Browse/Components/MobileSortAndFilterButton/MobileSortAndFilterButton.module.css
+++ b/src/Pages/MainContent/Pages/Browse/Components/MobileSortAndFilterButton/MobileSortAndFilterButton.module.css
@@ -44,10 +44,12 @@
 	margin: 0 10px;
 }
 
-.sortButton img,
-.filterButton img {
+.imageContainer {
 	width: 20px;
-	height: 20px;
+}
+
+.aspectRatioClassName {
+	padding-bottom: 100%;
 }
 
 @media screen and (max-width: 210px) {
