update: new card add in game card visual added

--- a/src/Shared/GameCards/GameCards/GameCards.module.css
+++ b/src/Shared/GameCards/GameCards/GameCards.module.css
@@ -6,7 +6,9 @@
 
 .headerButtonContainer {
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
+	gap: 1rem;
 	justify-content: space-between;
 }
 
