--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
@@ -1,5 +1,11 @@
-.addGameCard {
+.addGameCardContainer {
 	flex-shrink: 0;
+}
+
+.addGameCard {
+	width: 100%;
+	padding-bottom: calc(100% / 0.583785322);
+	position: relative;
 }
 
 .btn {
@@ -9,14 +15,11 @@
 	border: none;
 	cursor: pointer;
 	transition: background-color 200ms;
+	position: absolute;
 }
 
 .btn:hover {
 	background-color: rgba(255, 255, 255, 0.1);
-}
-
-.plus {
-	position: relative;
 }
 
 .plus::before {
@@ -39,4 +42,7 @@
 	width: 1.5rem;
 	height: 0.2rem;
 	background-color: white;
+}
+.footer {
+	height: 60px;
 }
