--- a/src/Shared/Modal/ModalBody/ModalBody.module.css
+++ b/src/Shared/Modal/ModalBody/ModalBody.module.css
@@ -6,7 +6,7 @@
 	top: 50%;
 	left: 50%;
 	translate: -50% -50%;
-	z-index: 4;
+	z-index: 5;
 	display: flex;
 	border-radius: 0.5rem;
 	opacity: 0;
@@ -42,7 +42,7 @@
 	font-weight: 400;
 	margin-bottom: 1rem;
 }
-.headerQuestion {
+.body {
 	font-weight: 400;
 	margin-bottom: 1rem;
 }
@@ -103,11 +103,20 @@
 	.modal {
 		width: max-content;
 	}
+	.header {
+		max-width: calc(100% - 1rem - 24px);
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 @media only screen and (max-width: 364px) {
 	.modal {
 		width: 100%;
 	}
+	.header {
+		font-size: 1.2rem;
+	}
+
 	.modalContentContainer {
 		padding: 1rem;
 	}
