--- a/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
+++ b/src/Pages/Dashboard/Components/DashboardBody/Components/Events/EditGameCards/Components/EditGameCardContainer/Components/EditGameCardAddCard/EditGameCardAddCard.module.css
@@ -44,16 +44,7 @@
 	background-color: white;
 }
 
-.confirmBtn {
-	width: 100%;
-	background-image: linear-gradient(to right, #8200ff, #df00ff);
-	color: white;
-	border: none;
-	padding: 1rem 2rem;
-	border-radius: 0.2rem;
-	cursor: pointer;
-	display: block;
-	margin-left: auto;
-	margin-top: 1rem;
-	position: relative;
+.title {
+	font-size: 1.1rem;
+	font-weight: 400;
 }
